--- a/index.html
+++ b/index.html
@@ -91,18 +91,41 @@
             </div>
         </nav>
         <!-- banner section -->
-        <div class="border-2 border-black relative">
-            <div class="carousel w-full">
+        <div class="">
+            <!-- carousel-1 -->
+            <div class="carousel w-full ">
                 <div id="slide1" class="carousel-item relative w-full">
-                    <img src="Images/1.png" class="w-full" />
+                    <img src="Images/1edited.png" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❮</a>
                         <a href="#slide2" class="btn btn-circle">❯</a>
                     </div>
                 </div>
+                <div id="slide2" class="carousel-item relative w-full">
+                    <img src="Images/2edited.jpg" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full">
+                    <img src="Images/3edited.jpg" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide4" class="carousel-item relative w-full hidden">
+                    <img src="Images/banner-3.jpg" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
             </div>
-            <div class="flex justify-end absolute -top-5">
-                <div class="w-1/2 p-8 bg-slate-950 rounded-2xl">
+            <!-- black box -->
+            <div class="h-10">
+                <div class="w-1/2 p-8 bg-slate-950 rounded-2xl ml-auto -translate-y-48 -translate-x-8">
                     <h3 class="mb-4 text-white text-2xl font-extrabold">Meet all the heroes from the field</h3>
                     <p class="text-gray-500 font-semibold">Dit amet consectetur. Condimentum dignissim adipiscing
                         aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
