--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
         .font-manrope {
             font-family: 'Manrope', sans-serif;
         }
+        .mahim{
+            color: #131318f2;
+        }
     </style>
 </head>
 
 <body class="font-manrope">
-    <header class="container mx-auto">
+    <header class="container mx-auto p-3">
         <nav class="my-5 lg:my-14">
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
@@ -57,7 +60,7 @@
                             <li><a>Contact</a></li>
                         </ul>
                     </div>
-                    <a class="text-4xl font-extrabold">Hockey<span class="text-pri-color">’</span>s</a>
+                    <a class="text-xl md:text-4xl font-extrabold">Hockey<span class="text-pri-color">’</span>s</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1">
@@ -68,7 +71,7 @@
                         <li><a>Contact</a></li>
                     </ul>
                 </div>
-                <div class="navbar-end flex gap-6">
+                <div class="navbar-end flex md:gap-6">
                     <div>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                             <g clip-path="url(#clip0_5_6)">
@@ -112,29 +115,93 @@
                     <img src="Images/3edited.jpg" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide2" class="btn btn-circle">❮</a>
-                        <a href="#slide4" class="btn btn-circle">❯</a>
-                    </div>
-                </div>
-                <div id="slide4" class="carousel-item relative w-full hidden">
-                    <img src="Images/banner-3.jpg" class="w-full" />
-                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide3" class="btn btn-circle">❮</a>
                         <a href="#slide1" class="btn btn-circle">❯</a>
                     </div>
                 </div>
             </div>
             <!-- black box -->
             <div class="h-10">
-                <div class="w-1/2 p-8 bg-slate-950 rounded-2xl ml-auto -translate-y-48 -translate-x-8">
+                <div class="lg:w-1/2 p-8 bg-slate-950 rounded-2xl ml-auto lg:-translate-y-48 lg:-translate-x-8">
                     <h3 class="mb-4 text-white text-2xl font-extrabold">Meet all the heroes from the field</h3>
                     <p class="text-gray-500 font-semibold">Dit amet consectetur. Condimentum dignissim adipiscing
                         aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
                 </div>
             </div>
         </div>
+        <hr class="mt-24 mb-9">
     </header>
-    <main>
-
+    <main class="container mx-auto p-3">
+        <!-- Professional Hockeys Club section -->
+        <div class="max-w-xl mx-auto text-center">
+            <h3 class="text-4xl font-extrabold mb-6">Professional Hockeys Club</h3>
+            <p class="font-semibold text-[#13131899]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+                turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+        <hr class="mt-9 mb-9">
+        <!-- pie charts section -->
+        <section class="">
+            <div class="flex justify-around">
+                <!-- chart-1 -->
+                <div class="flex flex-col items-center space-y-5">
+                    <div class="w-32 h-32 relative">
+                        <img src="Images/Group-2.png" alt="">
+                        <p class="absolute top-[40%] w-full text-center text-2xl font-extrabold">87%</p>
+                    </div>
+                    <h4 class="text-xl font-semibold">Prayer Facility</h4>
+                    <p class="text-center max-w-60">Amet consectetur. Condimentum dignissim adip iscing .</p>
+                </div>
+                <!-- chart-2 -->
+                <div class="flex flex-col items-center space-y-5">
+                    <div class="w-32 h-32 relative">
+                        <img src="Images/Group-1.png" alt="">
+                        <p class="absolute top-[40%] w-full text-center text-2xl font-extrabold">95%</p>
+                    </div>
+                    <h4 class="text-xl font-semibold">Prayer Facility</h4>
+                    <p class="text-center max-w-60">Amet consectetur. Condimentum dignissim adip iscing .</p>
+                </div>
+                <!-- chart-3 -->
+                <div class="flex flex-col items-center space-y-5">
+                    <div class="w-32 h-32 relative">
+                        <img src="Images/Group-3.png" alt="">
+                        <p class="absolute top-[40%] w-full text-center text-2xl font-extrabold">90%</p>
+                    </div>
+                    <h4 class="text-xl font-semibold">Prayer Facility</h4>
+                    <p class="text-center max-w-60">Amet consectetur. Condimentum dignissim adip iscing .</p>
+                </div>
+                <!-- chart-4-->
+                <div class="flex flex-col items-center space-y-5">
+                    <div class="w-32 h-32 relative">
+                        <img src="Images/Group-4.png" alt="">
+                        <p class="absolute top-[40%] w-full text-center text-2xl font-extrabold">80%</p>
+                    </div>
+                    <h4 class="text-xl font-semibold">Prayer Facility</h4>
+                    <p class="text-center max-w-60">Amet consectetur. Condimentum dignissim adip iscing .</p>
+                </div>
+            </div>
+        </section>
+        <hr class="mt-24 mb-9">
+        <!-- Program Sections? -->
+        <section>
+            <div class="max-w-xl mx-auto text-center">
+                <h3 class="text-4xl font-extrabold mb-6">Program Sections</h3>
+                <p class="font-semibold text-[#13131899]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+                    turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            </div>
+            <hr class="mt-9 mb-9">
+            <div class="flex flex-col gap-6">
+                <div class="flex">
+                    <div class="w-[570px] h-[338px] border-2 border-blue-600 rounded-3xl bg-[linear-gradient(to_right_bottom,rgba(0,0,0,0.5),rgba(0,0,0,0.4)),url(./Images/2.png)] bg-no-repeat">
+                        
+                    </div>
+                    <div class="w-1/2"><img class="w-full" src="Imges/2.png" alt=""></div>
+                </div>
+                <div class="w-full">
+                    <img class="w-full" src="Images/4.png" alt="">
+                </div>
+            </div>
+        </section>
+        <hr class="mt-9 mb-9">
+        <!-- draft -->
     </main>
     <footer>
 
