footer section edited

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
                             <li><a>Contact</a></li>
                         </ul>
                     </div>
-                    <a href="#"><div class="text-xl md:text-4xl font-extrabold text-[#131318]">Hockey<span class="text-pri-color">’</span>s</div></a>
+                    <a href="#">
+                        <div class="text-xl md:text-4xl font-extrabold text-[#131318]">Hockey<span
+                                class="text-pri-color">’</span>s</div>
+                    </a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1 font-bold text-xl">
@@ -118,9 +121,12 @@
             </div>
             <!-- black box -->
             <div class="h-10">
-                <div class="lg:w-1/2 p-8 bg-slate-950 rounded-2xl ml-auto lg:-translate-y-48 lg:-translate-x-8">
-                    <h3 class="mb-4 text-white text-2xl font-extrabold">Meet all the heroes from the field</h3>
-                    <p class="text-gray-500 font-semibold">Dit amet consectetur. Condimentum dignissim adipiscing
+                <div
+                    class="w-full lg:w-1/2 p-3 lg:p-8 bg-slate-950 rounded-2xl ml-auto lg:-translate-y-48 lg:-translate-x-8">
+                    <h3 class="mb-2 lg:mb-4 text-white text-xl lg:text-2xl font-extrabold">Meet all the heroes from the
+                        field</h3>
+                    <p class="text-gray-500 text-sm lg:text-base font-semibold">Dit amet consectetur. Condimentum
+                        dignissim adipiscing
                         aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
                 </div>
             </div>
@@ -137,7 +143,7 @@
         <hr class="mt-9 mb-9">
         <!-- pie charts section -->
         <section class="">
-            <div class="flex flex-col md:flex-row justify-around">
+            <div class="flex flex-col gap-6 md:flex-row justify-around">
                 <!-- chart-1 -->
                 <div class="flex flex-col items-center space-y-5">
                     <div class="w-32 h-32 relative">
@@ -193,12 +199,9 @@
                         <div class="p-4 lg:p-10">
                             <h3 class="text-xl lg:text-2xl font-extrabold mb-2 lg:mb-6 text-white">Junior Program</h3>
                             <p class="text-xs md:text-base  font-medium max-w-[490px] mb-2 lg:mb-6 text-white">Lorem
-                                ipsum, dolor sit amet
-                                consectetur
-                                adipisicing
-                                elit.
-                                Quisquam perferendis, earum, odio aut voluptatem ad voluptates ratione totam, ab modi
-                                necessitatibus nesciunt sunt aliquid possimus.</p>
+                                ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quis quae nesciunt
+                                libero maxime deleniti architecto earum modi veritatis eum. Lorem ipsum dolor sit amet.
+                            </p>
                             <button class="btn bg-pri-color border-none text-white font-bold text-xl">Register
                                 Now!</button>
                         </div>
@@ -243,7 +246,7 @@
         <!-- Our New Products section? -->
         <section>
             <div class="max-w-xl mx-auto text-center">
-                <h3 class="text-4xl font-extrabold mb-6">Program Sections</h3>
+                <h3 class="text-4xl font-extrabold mb-6">Our New Products</h3>
                 <p class="font-semibold text-[#13131899]">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Officiis sapiente facilis eveniet, architecto nam ab harum laboriosam maxime rem. Animi?</p>
             </div>
@@ -251,7 +254,7 @@
             <!-- cards -->
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
                 <!-- product card-1 -->
-                <div class="card card-side bg-base-100 shadow-xl border-2 border-solid">
+                <div class="card md:card-side bg-base-100 shadow-xl border-2 border-solid">
                     <figure class="p-6"><img src="Images/5.png" alt="Movie" /></figure>
                     <div class="card-body">
                         <div class="flex gap-3">
@@ -270,7 +273,7 @@
                     </div>
                 </div>
                 <!-- product card-2 -->
-                <div class="card card-side bg-base-100 shadow-xl border-2 border-solid">
+                <div class="card md:card-side bg-base-100 shadow-xl border-2 border-solid">
                     <figure class="p-6"><img src="Images/6.png" alt="Movie" /></figure>
                     <div class="card-body">
                         <div class="flex gap-3">
@@ -289,7 +292,7 @@
                     </div>
                 </div>
                 <!-- product card- 3-->
-                <div class="card card-side bg-base-100 shadow-xl border-2 border-solid">
+                <div class="card md:card-side bg-base-100 shadow-xl border-2 border-solid">
                     <figure class="p-6"><img src="Images/7.png" alt="Movie" /></figure>
                     <div class="card-body">
                         <div class="flex gap-3">
@@ -308,7 +311,7 @@
                     </div>
                 </div>
                 <!-- product card-4 -->
-                <div class="card card-side bg-base-100 shadow-xl border-2 border-solid">
+                <div class="card md:card-side bg-base-100 shadow-xl border-2 border-solid">
                     <figure class="p-6"><img src="Images/8.png" alt="Movie" /></figure>
                     <div class="card-body">
                         <div class="flex gap-3">
@@ -327,7 +330,7 @@
                     </div>
                 </div>
                 <!-- product card-5 -->
-                <div class="card card-side bg-base-100 shadow-xl border-2 border-solid">
+                <div class="card md:card-side bg-base-100 shadow-xl border-2 border-solid">
                     <figure class="p-6"><img src="Images/9.png" alt="Movie" /></figure>
                     <div class="card-body">
                         <div class="flex gap-3">
@@ -346,7 +349,7 @@
                     </div>
                 </div>
                 <!-- product card-6-->
-                <div class="card card-side bg-base-100 shadow-xl border-2 border-solid">
+                <div class="card md:card-side bg-base-100 shadow-xl border-2 border-solid">
                     <figure class="p-6"><img src="Images/10.png" alt="Movie" /></figure>
                     <div class="card-body">
                         <div class="flex gap-3">
@@ -400,34 +403,39 @@
         </section>
     </main>
     <hr class="mt-9 mb-9">
-    <footer class="footer p-10 lg:p-24 bg-[#131318] text-[#fff]">
-        <aside>
+    <footer class="flex justify-between p-10 lg:p-24 bg-[#131318] text-[#fff]">
+        <aside class="flex flex-col gap-3">
             <h3 class="footer-title">Get In Touch</h3>
-            <p class="max-w-[346px]">Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat dolor. Purus
-                urna in sit nullam proin. </p>
+            <p class="max-w-[346px]">Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat dolor.
+                Purusurna in sit nullam proin. </p>
             <p>ACME Industries Ltd.<br />Providing reliable tech since 1992</p>
             <div class="flex gap-2"><img src="Images/icons/mail.png" alt=""><span>hockeys@support.com</span></div>
             <div class="flex gap-2"><img src="Images/icons/call.png" alt=""><span>(+62) 123-321-543</span></div>
         </aside>
-        <nav>
+        <div class="flex justify-between">
+            <nav class="flex flex-col gap-3">
+                <header class="footer-title">Company</header>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+                <a class="link link-hover">News & Article</a>
+                <a class="link link-hover">Legal Notice</a>
+            </nav>
+            <nav class="flex flex-col gap-3">
+                <a class="footer-title">Support</a>
+                <a class="link link-hover">Help Center</a>
+                <a class="link link-hover">FAQs</a>
+                <a class="link link-hover">Ticket Support</a>
+                <a class="link link-hover">Contact Us</a>
+            </nav>
+        </div>
+        <nav class="flex flex-col gap-3">
             <header class="footer-title">Services</header>
-            <a class="link link-hover">Branding</a>
-            <a class="link link-hover">Design</a>
-            <a class="link link-hover">Marketing</a>
-            <a class="link link-hover">Advertisement</a>
-        </nav>
-        <nav>
-            <header class="footer-title">Company</header>
-            <a class="link link-hover">About us</a>
-            <a class="link link-hover">Contact</a>
-            <a class="link link-hover">Jobs</a>
-            <a class="link link-hover">Press kit</a>
-        </nav>
-        <nav>
-            <header class="footer-title">Legal</header>
-            <a class="link link-hover">Terms of use</a>
-            <a class="link link-hover">Privacy policy</a>
-            <a class="link link-hover">Cookie policy</a>
+            <a class="link link-hover">AcademyGroup Lesson</a>
+            <a class="link link-hover">Group Lesson</a>
+            <a class="link link-hover">Private Lesson</a>
+            <a class="link link-hover">Hockeys for kids</a>
+            <a class="link link-hover">Hockeys for Adult</a>
         </nav>
     </footer>
 </body>
