--- a/index.html
+++ b/index.html
@@ -403,16 +403,44 @@
         </section>
     </main>
     <hr class="mt-9 mb-9">
-    <footer class="flex justify-between p-10 lg:p-24 bg-[#131318] text-[#fff]">
-        <aside class="flex flex-col gap-3">
+    <footer class="footer p-10 lg:p-24 bg-[#131318] text-[#fff]">
+        <aside>
             <h3 class="footer-title">Get In Touch</h3>
-            <p class="max-w-[346px]">Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat dolor.
-                Purusurna in sit nullam proin. </p>
+            <p class="max-w-[346px]">Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat dolor. Purus
+                urna in sit nullam proin. </p>
             <p>ACME Industries Ltd.<br />Providing reliable tech since 1992</p>
             <div class="flex gap-2"><img src="Images/icons/mail.png" alt=""><span>hockeys@support.com</span></div>
             <div class="flex gap-2"><img src="Images/icons/call.png" alt=""><span>(+62) 123-321-543</span></div>
         </aside>
-        <div class="flex justify-between">
+        <nav>
+            <header class="footer-title">Services</header>
+            <a class="link link-hover">Branding</a>
+            <a class="link link-hover">Design</a>
+            <a class="link link-hover">Marketing</a>
+            <a class="link link-hover">Advertisement</a>
+        </nav>
+        <nav>
+            <header class="footer-title">Company</header>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Contact</a>
+            <a class="link link-hover">Jobs</a>
+            <a class="link link-hover">Press kit</a>
+        </nav>
+        <nav>
+            <header class="footer-title">Legal</header>
+            <a class="link link-hover">Terms of use</a>
+            <a class="link link-hover">Privacy policy</a>
+            <a class="link link-hover">Cookie policy</a>
+        </nav>
+    </footer>
+    <!-- <footer class="flex justify-between flex-col lg:flex-row p-10 lg:p-24 bg-[#131318] text-[#fff]">
+        <aside class="flex flex-col items-center  gap-3 border-2 border-blue-500">
+            <h3 class="footer-title">Get In Touch</h3>
+            <p>ACME Industries Ltd.<br />Providing reliable tech since 1992</p>
+            <div class="flex gap-2"><img src="Images/icons/mail.png" alt=""><span>hockeys@support.com</span></div>
+            <div class="flex gap-2"><img src="Images/icons/call.png" alt=""><span>(+62) 123-321-543</span></div>
+        </aside>
+        <div class="flex justify-between lg:gap-44">
             <nav class="flex flex-col gap-3">
                 <header class="footer-title">Company</header>
                 <a class="link link-hover">Branding</a>
@@ -437,7 +465,7 @@
             <a class="link link-hover">Hockeys for kids</a>
             <a class="link link-hover">Hockeys for Adult</a>
         </nav>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
