--- a/index.html
+++ b/index.html
@@ -141,42 +141,30 @@
                 turpis placerat dolor. Purus urna in sit nullam proin. </p>
         </div>
         <hr class="mt-9 mb-9">
-        <!-- pie charts section -->
+        <!-- Redial Progress -->
         <section class="">
             <div class="flex flex-col gap-6 md:flex-row justify-around">
-                <!-- chart-1 -->
-                <div class="flex flex-col items-center space-y-5">
-                    <div class="w-32 h-32 relative">
-                        <img src="Images/Group-2.png" alt="">
-                        <p class="absolute top-[40%] w-full text-center text-2xl font-extrabold">87%</p>
-                    </div>
+                <div class="flex flex-col items-center gap-5">
+                    <div class="radial-progress text-[#FF4240] text-2xl font-extrabold"
+                        style="--value:87; --size:8rem; --thickness: .8rem;" role="progressbar">87%</div>
                     <h4 class="text-xl font-semibold">Prayer Facility</h4>
                     <p class="text-center max-w-60">Amet consectetur. Condimentum dignissim adip iscing .</p>
                 </div>
-                <!-- chart-2 -->
-                <div class="flex flex-col items-center space-y-5">
-                    <div class="w-32 h-32 relative">
-                        <img src="Images/Group-1.png" alt="">
-                        <p class="absolute top-[40%] w-full text-center text-2xl font-extrabold">95%</p>
-                    </div>
+                <div class="flex flex-col items-center gap-5">
+                    <div class="radial-progress text-[#49D293] text-2xl font-extrabold"
+                        style="--value:95; --size:8rem; --thickness: .8rem;" role="progressbar">95%</div>
                     <h4 class="text-xl font-semibold">Prayer Facility</h4>
                     <p class="text-center max-w-60">Amet consectetur. Condimentum dignissim adip iscing .</p>
                 </div>
-                <!-- chart-3 -->
-                <div class="flex flex-col items-center space-y-5">
-                    <div class="w-32 h-32 relative">
-                        <img src="Images/Group-3.png" alt="">
-                        <p class="absolute top-[40%] w-full text-center text-2xl font-extrabold">90%</p>
-                    </div>
+                <div class="flex flex-col items-center gap-5">
+                    <div class="radial-progress text-[#FFB546] text-2xl font-extrabold"
+                        style="--value:90; --size:8rem; --thickness: .8rem;" role="progressbar">90%</div>
                     <h4 class="text-xl font-semibold">Prayer Facility</h4>
                     <p class="text-center max-w-60">Amet consectetur. Condimentum dignissim adip iscing .</p>
                 </div>
-                <!-- chart-4-->
-                <div class="flex flex-col items-center space-y-5">
-                    <div class="w-32 h-32 relative">
-                        <img src="Images/Group-4.png" alt="">
-                        <p class="absolute top-[40%] w-full text-center text-2xl font-extrabold">80%</p>
-                    </div>
+                <div class="flex flex-col items-center gap-5">
+                    <div class="radial-progress text-[#4C8DF1] text-2xl font-extrabold"
+                        style="--value:80; --size:8rem; --thickness: .8rem;" role="progressbar">80%</div>
                     <h4 class="text-xl font-semibold">Prayer Facility</h4>
                     <p class="text-center max-w-60">Amet consectetur. Condimentum dignissim adip iscing .</p>
                 </div>
@@ -370,6 +358,71 @@
             </div>
         </section>
         <hr class="mt-24 mb-9">
+        <!-- Get In Touch section -->
+        <section>
+            <div class="max-w-xl mx-auto text-center mb-20">
+                <h3 class="text-4xl font-extrabold mb-6">Get In Touch</h3>
+                <p class="font-semibold text-[#13131899]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            </div>
+            <div class="flex flex-col lg:flex-row gap-1 mb-12">
+                <!-- left side -->
+                <div class="p-12 w-full lg:w-1/3 grid grid-rows-3 gap-6 border-2 border-[#1313181A] rounded-2xl">
+                    <div class="bg-[#BCED6D1A] p-8 w-full rounded-2xl">
+                        <img src="Images/call.png" alt="">
+                        <div><small>Phone Number</small><br><span class="font-extrabold">(+62) 123-321-543</span></div>
+                    </div>
+                    <div class="bg-[#FDDD5F1A] p-8 w-full rounded-2xl">
+                        <img src="Images/massege.png" alt="">
+                        <div><small>Email:</small>
+                            <br><span class="font-extrabold">hokeyhero@gmail.com</span>
+                        </div>
+                    </div>
+                    <div class="bg-[#629CF31A] p-8 w-full rounded-2xl">
+                        <img src="Images/map.png" alt="">
+                        <div><small>Location: </small><br><span class="font-extrabold">152/1 Mohakhali <br>Wireless
+                                Gate</span></div>
+                    </div>
+                </div>
+                <!-- right side -->
+                <form class="w-full lg:w-2/3 p-12 border-2 border-[#1313181A] rounded-2xl">
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-5">
+                        <div class="">
+                            <p class="font-extrabold">Your Name</p>
+                            <input type="text" placeholder="Enter Your Name"
+                                class="input input-ghost w-full bg-[#13131808] max-w-xs" />
+                        </div>
+                        <div class="">
+                            <p class="font-extrabold">Your email</p>
+                            <input type="email" placeholder="Enter Your Email"
+                                class="input input-ghost w-full bg-[#13131808] max-w-xs" />
+                        </div>
+                        <div class="">
+                            <p class="font-extrabold">Subject</p>
+                            <input type="text" placeholder="Enter Your Subject"
+                                class="input input-ghost w-full bg-[#13131808] max-w-xs" />
+                        </div>
+                        <div class="">
+                            <p class="font-extrabold">Phone Number</p>
+                            <input type="text" placeholder="Enter Your Phone Number"
+                                class="input input-ghost w-full bg-[#13131808] max-w-xs" />
+                        </div>
+                    </div>
+                    <div>
+                        <label for="">
+                            <div class="label">
+                                <p class="label-text font-extrabold">Your Message </p>
+                            </div>
+                            <textarea class="textarea w-full h-full bg-[#13131808]"
+                                placeholder="Write Your Message" rows="10"></textarea>
+                        </label>
+                    </div>
+                    <div class="pt-6">
+                        <button class="btn btn-block bg-pri-color border-none text-white font-bold text-xl">Send
+                            Message</button>
+                    </div>
+                </form>
+            </div>
+        </section>
         <!-- Social Media section -->
         <section>
             <div class="footer footer-center p-10 bg-[#13131812] text-base-content rounded">
@@ -403,6 +456,7 @@
         </section>
     </main>
     <hr class="mt-9 mb-9">
+    <!-- footer section -->
     <footer class="footer p-10 lg:p-24 bg-[#131318] text-[#fff]">
         <aside>
             <h3 class="footer-title">Get In Touch</h3>
