started last part

--- a/index.html
+++ b/index.html
@@ -358,6 +358,11 @@
             </div>
         </section>
         <hr class="mt-24 mb-9">
+        <!-- Clients Question section -->
+        <section>
+            
+        </section>
+        <hr class="mt-24 mb-9">
         <!-- Get In Touch section -->
         <section>
             <div class="max-w-xl mx-auto text-center mb-20">
