full project revised

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!-- banner section -->
         <div class="mb-48">
             <!-- carousel-1 -->
-            <div class="carousel w-full ">
+            <div class="carousel w-full rounded-xl">
                 <div id="slide1" class="carousel-item relative w-full">
                     <img src="Images/1edited.png" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -125,9 +125,7 @@
                     class="w-full lg:w-1/2 p-3 lg:p-8 bg-slate-950 rounded-2xl ml-auto lg:-translate-y-48 lg:-translate-x-8">
                     <h3 class="mb-2 lg:mb-4 text-white text-xl lg:text-2xl font-extrabold">Meet all the heroes from the
                         field</h3>
-                    <p class="text-gray-500 text-sm lg:text-base font-semibold">Dit amet consectetur. Condimentum
-                        dignissim adipiscing
-                        aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+                    <p class="text-gray-500 text-sm lg:text-base font-semibold">New or returning to Hockey? Find out what type of hockey suits you, what each type is all about and where to play. Stic with hokey and get involve in delivering hokey.</p>
                 </div>
             </div>
         </div>
@@ -137,8 +135,7 @@
         <!-- Professional Hockeys Club section -->
         <div class="max-w-xl mx-auto text-center">
             <h3 class="text-4xl font-extrabold mb-6">Professional Hockeys Club</h3>
-            <p class="font-semibold text-[#13131899]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-                turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            <p class="font-semibold text-[#13131899]">The winner of the league qualifies for the Hockey League in the following season.144 teams and approximately 3200 players and 250 umpires and officials  participate in the league</p>
         </div>
         <hr class="mt-9 mb-9">
         <!-- Redial Progress -->
@@ -175,8 +172,7 @@
         <section>
             <div class="max-w-xl mx-auto text-center">
                 <h3 class="text-4xl font-extrabold mb-6">Program Sections</h3>
-                <p class="font-semibold text-[#13131899]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-                    turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                <p class="font-semibold text-[#13131899]">Hockey League is the pinnacle of club hockey in England. The league sits above the eight Area Leagues and has three tiers Premier Division; Division One - North and South; Conference East, Midlands, North, West.  </p>
             </div>
             <hr class="mt-9 mb-9">
             <div class="flex flex-col gap-6">
@@ -235,12 +231,11 @@
         <section>
             <div class="max-w-xl mx-auto text-center">
                 <h3 class="text-4xl font-extrabold mb-6">Our New Products</h3>
-                <p class="font-semibold text-[#13131899]">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Officiis sapiente facilis eveniet, architecto nam ab harum laboriosam maxime rem. Animi?</p>
+                <p class="font-semibold text-[#13131899]">Got a game plan for us? We're all ears! Let's talk hockey drop us a line and join the team spirit. Puck yeah! Questions, cheers, or just wanna chat hockey? Hit us up! We're always happy to hear from you.</p>
             </div>
             <hr class="mt-9 mb-9">
             <!-- cards -->
-            <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
                 <!-- product card-1 -->
                 <div class="card md:card-side bg-base-100 shadow-xl border-2 border-solid">
                     <figure class="p-6"><img src="Images/5.png" alt="Movie" /></figure>
@@ -269,7 +264,7 @@
                             <div class="flex gap-1"><img src="Images/icons/Frame-2.png" alt=""><span>20</span></div>
                             <div class="flex gap-1"><img src="Images/icons/Frame-3.png" alt=""><span>200</span></div>
                         </div>
-                        <h2 class="card-title text-xl font-extrabold">World Cup Flags Football</h2>
+                        <h2 class="card-title text-xl font-extrabold">Cap For Hokey</h2>
                         <p>Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
                         <div class="">
                             <h3 class="text-xl font-extrabold text-pri-color">Price - $22.00</h3>
@@ -288,7 +283,7 @@
                             <div class="flex gap-1"><img src="Images/icons/Frame-2.png" alt=""><span>20</span></div>
                             <div class="flex gap-1"><img src="Images/icons/Frame-3.png" alt=""><span>200</span></div>
                         </div>
-                        <h2 class="card-title text-xl font-extrabold">World Cup Flags Football</h2>
+                        <h2 class="card-title text-xl font-extrabold">Helmet for Hokey</h2>
                         <p>Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
                         <div class="">
                             <h3 class="text-xl font-extrabold text-pri-color">Price - $22.00</h3>
@@ -326,7 +321,7 @@
                             <div class="flex gap-1"><img src="Images/icons/Frame-2.png" alt=""><span>20</span></div>
                             <div class="flex gap-1"><img src="Images/icons/Frame-3.png" alt=""><span>200</span></div>
                         </div>
-                        <h2 class="card-title text-xl font-extrabold">World Cup Flags Football</h2>
+                        <h2 class="card-title text-xl font-extrabold">Jursey for Hokey</h2>
                         <p>Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
                         <div class="">
                             <h3 class="text-xl font-extrabold text-pri-color">Price - $22.00</h3>
@@ -345,7 +340,7 @@
                             <div class="flex gap-1"><img src="Images/icons/Frame-2.png" alt=""><span>20</span></div>
                             <div class="flex gap-1"><img src="Images/icons/Frame-3.png" alt=""><span>200</span></div>
                         </div>
-                        <h2 class="card-title text-xl font-extrabold">World Cup Flags Football</h2>
+                        <h2 class="card-title text-xl font-extrabold">World Cup Football</h2>
                         <p>Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
                         <div class="">
                             <h3 class="text-xl font-extrabold text-pri-color">Price - $22.00</h3>
@@ -357,17 +352,71 @@
                 </div>
             </div>
         </section>
-        <hr class="mt-24 mb-9">
+        <hr class="mt-24 mb-12">
         <!-- Clients Question section -->
         <section>
-            
+            <div class="max-w-xl mx-auto text-center mb-9">
+                <h3 class="text-4xl font-extrabold mb-6">Clients Question</h3>
+                <p class="font-semibold text-[#13131899]">Coach Clint throws a thought-provoking hockey question your way - answer and join the discussion! </p>
+            </div>
+            <hr class="mt-9 mb-9">
+            <div class="flex flex-col lg:flex-row p-8 gap-10 border-2 border-[#1313181a]">
+                <div class="">
+                    <div><img src="Images/11.png" alt=""></div>
+                </div>
+                <div class="">
+                    <div class="collapse collapse-plus">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">Our Equipment</div>
+                        <div class="collapse-content">
+                            <p>Helmets gleaming, sticks honed, pucks flying - full gear, ready to charge!</p>
+                        </div>
+                    </div><hr>
+                    <div class="collapse collapse-plus">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">Our Equipment</div>
+                        <div class="collapse-content">
+                            <p>Helmets gleaming, sticks honed, pucks flying - full gear, ready to charge!</p>
+                        </div>
+                    </div><hr>
+                    <div class="collapse collapse-plus">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">Hockey Training</div>
+                        <div class="collapse-content">
+                            <p>Drills ignite muscle memory, blades carve ice symphonies, sweat paints our dedication
+                                building speed, skill, teamwork, one practice at a time. </p>
+                        </div>
+                    </div><hr>
+                    <div class="collapse collapse-plus">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">Private Lessons</div>
+                        <div class="collapse-content">
+                            <p>Whether beginner or bantam, we refine your skills and boost your confidence on  ice.</p>
+                        </div>
+                    </div><hr>
+                    <div class="collapse collapse-plus">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">Ski Touring</div>
+                        <div class="collapse-content">
+                            <p>Helmets gleaming, sticks honed, pucks flying - full gear, ready to charge!</p>
+                        </div>
+                    </div><hr>
+                    <div class="collapse collapse-plus">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">Booking</div>
+                        <div class="collapse-content">
+                            <p>Helmets gleaming, sticks honed, pucks flying - full gear, ready to charge!</p>
+                        </div>
+                    </div><hr>
+                </div>
+            </div>
         </section>
         <hr class="mt-24 mb-9">
         <!-- Get In Touch section -->
         <section>
             <div class="max-w-xl mx-auto text-center mb-20">
                 <h3 class="text-4xl font-extrabold mb-6">Get In Touch</h3>
-                <p class="font-semibold text-[#13131899]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                <p class="font-semibold text-[#13131899]">Ready to break the ice? Shoot us your queries, feedback, or high fives! We're on the same team.</p>
             </div>
             <div class="flex flex-col lg:flex-row gap-1 mb-12">
                 <!-- left side -->
@@ -389,7 +438,7 @@
                     </div>
                 </div>
                 <!-- right side -->
-                <form class="w-full lg:w-2/3 p-12 border-2 border-[#1313181A] rounded-2xl">
+                <form class="w-full lg:w-2/3 p-4 border-2 border-[#1313181A] rounded-2xl">
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-5">
                         <div class="">
                             <p class="font-extrabold">Your Name</p>
@@ -417,8 +466,8 @@
                             <div class="label">
                                 <p class="label-text font-extrabold">Your Message </p>
                             </div>
-                            <textarea class="textarea w-full h-full bg-[#13131808]"
-                                placeholder="Write Your Message" rows="10"></textarea>
+                            <textarea class="textarea w-full h-full bg-[#13131808]" placeholder="Write Your Message"
+                                rows="10"></textarea>
                         </label>
                     </div>
                     <div class="pt-6">
